2009-11-13  David King  <davidk@openismus.com>

	* configure.ac: Fix check for SQLite and libgettextpo.

2009-11-12  David King  <davidk@openismus.com>

	* glom/glom_document.dtd: Update to more completely validate example
	documents.
	* Makefile_tests.am:
	* tests/dtd/test_example_sqlite: Add a test that attempts to validate
	an example SQLite Glom document against glom_document.dtd.

2009-11-10  David King  <davidk@openismus.com>

	* configure.ac: Fix incorrect conditional for Maemo libgettextpo check.

2009-11-06  Murray Cumming  <murrayc@murrayc.com>

	Fix a crash when specifying a static image on the layout.

	* glom/utility_widgets/imageglom.cc: on_menupopup_activate_select_file():
	Check for a null parent window pointer to avoid a crash, fixing bug 
	#600954 (Michael Hasselmann).

2009-11-06  David King  <davidk@openismus.com>

	* configure.ac:
	* Makefile_glom.am: Do not link to libgettextpo on Maemo, and
	additionally do not check for it either.

2009-11-04  David King  <davidk@openismus.com>

	* glom.xml: Add Maemo-specific category for classification of .glom
	files as "documents".

2009-11-04  David King  <davidk@openismus.com>

	* Makefile_glom.am: Statically link to libgettextpo on Maemo, as
	Gettext is available in the SDK and autobuilder but not on the device.

1.12.3:

2009-10-30  Murray Cumming  <murrayc@murrayc.com>

	List views and related records portals: Enough space for titles.

	* glom/utils_ui.[h|cc]: get_suitable_field_width_for_widget():
	Optionally calculate enough space for the title too, for TreeView 
	columns.
	* glom/utility_widgets/db_adddel/db_adddel.cc: treeview_append_column():
	When choosing a default column width, make sure there's enough for the 
	title too.

2009-10-30  Murray Cumming  <murrayc@murrayc.com>

	List views and related records portals: Avoid zero-width columns.

	* glom/utility_widgets/db_adddel/db_adddel.cc: treeview_append_column():
	Except on maemo, don't try to auto-expand a non-rightmost column, 